--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="contact-info">
           <span class="github">GitHub: </span>
           <a href="https://github.com/hanpm" class="github-val">github.com/hanpm</a>
+          <span class="counter-number-style">| View Count: </span>
+          <a class="counter-number counter-number-val">Couldn't read count</a>
         </div>
         
         <div class="about">
