adding CI/CD and update html

--- a/website/index.html
+++ b/website/index.html
@@ -21,7 +21,7 @@
         
         <div class="about">
           <span class="desc">
-            A highly motivated 1st-gen. CS grad from CSULB dedicated to learning about technology and fostering diversity in the tech industry. This abridged version of my resume aimed to practice utilizing Amazon Web Services to deploy a resume on the cloud.
+            A highly motivated 1st-gen. CS graduate from CSULB dedicated to learning about technology and fostering diversity in the tech industry. This abridged version of my resume aimed to practice utilizing Amazon Web Services to deploy a resume on the cloud.
           </span>
         </div>
       </div>
